Convert integration classes to Java 17